load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
"""
load("@io_bazel_rules_dart//dart:def.bzl", "dart_library")
load("@io_bazel_rules_dart//proto:def.bzl", "dart_proto_library") 
"""
proto_library(
    name = "blau_proto",
    srcs = ["blau.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "blau_go_proto",
    importpath = "github.com/abergmeier/blau/api/pb",
    proto = ":blau_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    visibility = ["//visibility:public"],
)
"""
dart_proto_library(
    name = "blau_dart_proto",
    importpath = "github.com/abergmeier/blau/api/pb",
    proto = ":blau_proto",
    visibility = ["//visibility:public"],
)

dart_library(
    name = "dart_default_library",
    embed = [":blau_dart_proto"],
    visibility = ["//visibility:public"],
)
"""
go_library(
    name = "go_default_library",
    embed = [
        ":blau_go_proto",
    ],
    importpath = "github.com/abergmeier/blau/api/pb",
    visibility = ["//visibility:public"],
)
