load("@io_bazel_rules_go//go:def.bzl", "go_binary")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_binary(
    name = "players",
    srcs = [
        "main.go",
    ],
    deps = [
        "@com_google_cloud_go//firestore:go_default_library",
	    "@org_golang_google_grpc//:go_default_library",
	    "@org_golang_google_grpc//codes:go_default_library",
	    "@org_golang_google_grpc//status:go_default_library",
        "//pkg/server:go_default_library",
        "//api/pb:go_default_library",
    ],
)

go_image(
    name = "image",
    srcs = ["main.go"],
    deps = [
        "@com_google_cloud_go//firestore:go_default_library",
	    "@org_golang_google_grpc//:go_default_library",
	    "@org_golang_google_grpc//codes:go_default_library",
	    "@org_golang_google_grpc//status:go_default_library",
        "//pkg/server:go_default_library",
        "//api/pb:go_default_library",
    ],
    importpath = "github.com/abergmeier/blau",
)
